# os-car-man

./: .gitconfig  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE.txt  Makefile  mkdocs.yml
ci-requirements/: entrypoint.sh  pyproject.toml  requirements-3.11.in  requirements-3.11.out  requirements.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  README.md  about.md  activate_car.md  documents.md  mobile_app.md  rules.md  service.md  voice_commands.md  wechat_n_esender.md
docs/zeekr/: покупка.md
hooks/: patch_slugify.py
