[tool.poetry]
name = "os-car-man"
version = "0.1.0"
description = ""
authors = ["Nikita Almakov <nikita.almakov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "os_car_man"}]

[tool.poetry.dependencies]
python = "~3.11"
markdown-include = "^0.8.1"
mdx-truly-sane-lists = "^1.3"
mkdocs = "^1.5.3"
mkdocs-exclude = "^1.0.2"
mkdocs-material = "^9.4.1"
pygments = "^2.16.1"
pymdown-extensions = "^10.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
